--- a/src/styles/explore.css
+++ b/src/styles/explore.css
@@ -1,3 +1,32 @@
 body{
     margin: 0;
+    padding: 0;
+    font-family: "sora";
+}
+
+h1, h2, p{
+    margin: 0
+}
+
+.category-container{
+    padding: 0 20px 20px 20px;
+}
+
+.category-container > div{
+    box-shadow: 0 0 3.5px white;
+    width: 100%;
+    height: 280px;
+    padding: 10px 15px;
+    margin-top: 50px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: transform .5s ease;
+}
+
+.category-container > div:hover{
+    transform: scaleY(1.1);
+}
+
+.category > h2{
+    text-align: center;
 }
