--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -22,13 +22,23 @@ body{
     
 }
 
+.img-display > img{
+    width: 600px;
+    height: 600px;
+    object-fit: cover;
+    position: absolute;
+    right: 0;
+}
+
+
+
 @layer HEADER{
 
     header{
         width: 100%;
         height: 80px;
         padding: 0 20px;
-        background-color: var(--bg-color);
+        /* background-color: var(--bg-color); */
         border-bottom: 1px solid #ffd13b0c;
         display: flex;
         align-items: center;
