--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,6 +2,7 @@
     --bg-color: #616c60;
     --txt-color: #fecfcb;
     --btn-color: #ffd23b;
+    --darker-bg-color: #4e564d;
 }
 
 *{
@@ -16,96 +17,28 @@ html{
 body{
     background-color: var(--bg-color);
     margin: 0;
-    margin-top: 80px;
     font-family: "Righteous", Arial, Helvetica, sans-serif;
     padding-bottom: 10000px;
     
 }
 
 .img-display > img{
-    width: 600px;
-    height: 600px;
+    width: 400px;
+    height: 650px;
     object-fit: cover;
     position: absolute;
-    right: 0;
+    right: 10%;
+    top: 11%;
 }
 
-
-
-@layer HEADER{
-
-    header{
-        width: 100%;
-        height: 80px;
-        padding: 0 20px;
-        /* background-color: var(--bg-color); */
-        border-bottom: 1px solid #ffd13b0c;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        position: fixed;
-        left: 0;
-        right: 0;
-        top: 0;
-        z-index: 1;
-    }
-
-    .lft-header-flex{
-        display: flex;
-        align-items: center;
-    }
-
-    .lft-header-flex > h1 {
-        font-size: 24px;
-        color: var(--txt-color);
-        margin: 0;
-        cursor: pointer;
-    }
-
-    .lft-header-flex > img {
-        width: 60px;
-        height: 60px;
-        margin-left: -16px;
-        z-index: 2;
-        cursor: pointer;
-    }
-
-    /* NAVIGATION */
-    a{
-        text-decoration: none;
-        color: var(--txt-color);
-    }
-    .nav-links{
-        display: flex;
-        gap: 60px;
-        list-style-type: none;
-        /* color: var(--txt-color); */
-        font-size: 18px;
-    }
-
-    .nav-links > li{
-        cursor: pointer;
-        padding: 7px 15px;
-        border-radius: 8px;
-        transition: scale .5s, box-shadow .5s;
-        font-family: inherit;
-    }
-
-    .nav-links > li:hover{
-        background-color: #ecc5bb05;
-        color: var(--btn-color);
-        scale: 1.1;
-        box-shadow: 0 0 0 1px var(--btn-color), 0 0 0 1px var(--btn-color);
-        
-    }
-
-}
 
 @layer BODY-LOGO{
     .landing-page{
         position: relative;
         width: 100%;
-        height: 100vh;
+        height: 730px;
+        /* border: 5px dashed blue; */
+        background-color: var(--darker-bg-color);
     }
 
     .logo{
@@ -127,20 +60,20 @@ body{
         margin-left: -6px;
     }
 
-    .logo > h1{
+    .logo > h2{
         color: var(--txt-color);
         animation: name 3s ;
         animation-fill-mode: forwards;
         margin: 0;
-        font-size: 110px;
+        font-size: 50px;
     }
 
-    .logo > h2{
+    .logo > p{
         color: var(--txt-color);
         animation : name 2s ease 3s;
         animation-fill-mode: forwards;
         margin: 0;
-        font-size: 35px;
+        font-size: 25px;
         letter-spacing: 6px;
         margin-left: 6px;
         margin-top: -30px;
