--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,3 +1,95 @@
 body{
     margin-top: 80px;
 }
+
+.landing-page{
+    position: relative;
+    width: 100%;
+    height: 730px;
+    background-color: var(--darker-bg-color);
+}
+
+.img-display > img{
+    width: 400px;
+    height: 650px;
+    object-fit: cover;
+    position: absolute;
+    right: 10%;
+    top: 11%;
+}
+
+.logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    position: absolute;
+    top: 30%;
+    left: 5%;
+}
+
+.logo > img {
+    width: 350px;
+    height: 350px;
+    cursor: pointer;
+    animation: logo 3s;
+    margin-left: -6px;
+}
+
+.logo > h2{
+    color: var(--txt-color);
+    animation: name 3s ;
+    animation-fill-mode: forwards;
+    margin: 0;
+    font-size:45px;
+}
+
+.logo > p{
+    color: var(--txt-color);
+    animation : name 2s ease 3s;
+    animation-fill-mode: forwards;
+    margin: 0;
+    font-size: 25px;
+    letter-spacing: 5px;
+    margin-left: 6px;
+    opacity: 0;
+}
+
+.explore-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.explore-btn:hover > button, 
+.explore-btn > .arrow{
+    transition: 1s ease;
+}   
+
+.explore-btn > button {
+    border: none;
+    padding: 8px 20px;
+    border-radius: 6px;
+    background-color: var(--btn-color);
+    font-family: inherit;
+    color: var(--bg-color);
+    font-size: 17px;
+    cursor: pointer;
+}
+
+.explore-btn:hover > button{
+    transform: scale(1.1);
+}
+
+.arrow{
+    font-size: 50px;
+    color: var(--btn-color);
+    margin-top: 5px;
+    cursor: pointer;
+}
+
+.explore-btn:hover > .arrow{
+    transform: translateY(15px);
+}
+
