--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,8 +1,8 @@
 :root{
-    --bg-color: #616c60;
+    --bg-color: #d9e0d5;
     --txt-color: #fecfcb;
     --btn-color: #ffd23b;
-    --darker-bg-color: #4e564d;
+    --darker-bg-color: #2f3430;
 }
 
 *{
