--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -36,6 +36,13 @@
     }
 
     /* NAVIGATION */
+    nav{
+        display: flex;
+        align-items: center;
+        gap: 50px;
+    }
+
+
     a{
         text-decoration: none;
         color: var(--txt-color);
@@ -44,7 +51,7 @@
 
     .nav-links{
         display: flex;
-        gap: 60px;
+        gap: 50px;
         list-style-type: none;
         /* color: var(--txt-color); */
         font-size: 18px;
@@ -73,4 +80,15 @@
         transition: color .8s ease;
     }
 
+    .book-btn{
+        border: none;
+        padding: 8px 35px;
+        border-radius: 6px;
+        background-color: var(--btn-color);
+        font-family: inherit;
+        color: var(--darker-g-color);
+        font-weight: 600;
+        font-size: 17px;
+        cursor: pointer;
+    }
 }
