--- a/src/styles/main-content.css
+++ b/src/styles/main-content.css
@@ -9,37 +9,57 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 50px;
 }
 .nail-services, .spa-treatments{
-    width: 100%;
+    width: 600px;
     height: 400px;
     border-radius: 8px;
-    border: 1px solid black;
     background-color: var(--darker-bg-color);
     text-align: center;
     color: var(--txt-color);
     padding: 10px 15px;
 }
 
-.nails-bg {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    border-radius: 8px;
-}
-
-
-.nails-bg > img{
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
 .main-content-cont > h1{
     margin: 50px 0;
     color: var(--darker-bg-color);
 }
 
 .nail-services{
-    
+    background-image: url(../images/background/nail-services.png);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    isolation: isolate;
+}
+
+.nail-services > h2{
+    font-size: 2.3rem;
+}
+
+.nail-services::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-color: black;
+    z-index: -1;
+    opacity: .5;
+}
+
+.spa-treatments{
+    background-image: url(../images/background/A\ serene\ spa\ setting.png);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    isolation: isolate;
+}
+
+.spa-treatments::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-color: black;
+    z-index: -1;
+    opacity: .55;
 }
